# YSU-engine

./: .gitignore  BILATERAL_DENOISE.md  FINAL_DENOISER_REPORT.md  LICENSE  README.md  ReadMe.txt  aabb_hit_asm.S  analyze_3m_denoise.py  analyze_denoise.py  analyze_output.py  baseline_bvh.csv  bilateral_denoise.c  bilateral_denoise.h  build_shaders.ps1  bvh.c  bvh.h  camera.c  camera.h  check_hdr_ppm.py  check_identical.py  check_obj_bounds.py  check_ppm.py  collect_baselines.ps1  collect_dataset.ps1  collect_dataset_merged.ps1  color.c  color.h  create_synthetic_test.py  cube_debug.txt  denoise.c  denoise.h  editor.c  final_comparison.py  gbuffer.c  gbuffer.h  gbuffer_dump.c  gbuffer_dump.h  gen_scene.py  gpu_bvh.h  gpu_bvh_build.c  (+62 more)
.github/workflows/: monograph.yml
docs/: ADVANCED_DENOISE_COMPLETE.md  ADVANCED_DENOISE_FEATURES.md  ADVANCED_DENOISE_IMPLEMENTATION.md  ADVANCED_DENOISE_QUICK_REF.md  ANIMATED_SCENE_SUMMARY.md  ANIMATED_SCENE_VALIDATION.md  AVX_PORTABILITY.md  BILATERAL_DENOISE.md  BUILD_NERF_SIMD.md  BUILD_TEST_SUMMARY.md  CHANGELOG_ALL_FEATURES.md  COMPARE_MODES.md  COMPLETED_CHANGES.md  COMPLETE_TEST_SUMMARY.md  DEBUGGING_NIGHTMARE.md  DELIVERABLES.md  DELIVERY_SUMMARY.md  DENOISER_STATUS.md  DENOISER_TESTING.md  DEPLOYMENT_READY_1080P_60FPS.md  DEPLOY_60FPS.md  DEPTH_CONDITIONED_NERF_QA.md  DEPTH_CONDITIONED_NERF_README.md  EXECUTIVE_SUMMARY.md  FEATURES_5_10_COMPLETE.md  FEATURES_6_10_COMPLETE.md  FEATURE_IMPLEMENTATION_STATUS.md  FINAL_DENOISER_REPORT.md  FINAL_FPS_RESULTS.md  FINAL_PROJECT_SUMMARY.md  FIX_SUMMARY.md  FPS_TEST_COMMANDS.md  FPS_TEST_QUICK_SUMMARY.md  FPS_TEST_RESULTS.md  FPS_TEST_RESULTS_ADVANCED.md  FULL_OPTIMIZATION_GUIDE.md  GPU_BUG_FIX_REPORT.md  GPU_OPTIMIZATION_FINAL_REPORT.md  GPU_OPTIMIZATION_RESULTS.md  GPU_RENDER_SCALE_2X_BOOST.md  (+53 more)
docs/sass/: OPTIX_INTEGRATION_PATTERNS.md  SASS_KERNEL_OPTIMIZATION_GUIDE.md  SM89_ARCHITECTURE_REFERENCE.md
experimental/: README_experimental_real_sicrama.md  ysu_packet.c  ysu_packet.h  ysu_wavefront.c  ysu_wavefront.h
shaders/: README_WINDOW.md  TONEMAP_SHADER_BUILD.txt  fill.comp  fill.comp.spv  present.frag  present.frag.spv  present.vert  present.vert.spv  tonemap.comp  tonemap.comp.spv  tri.comp  tri.comp.spv
src/core/: image.c
src/cuda_lbm/: CMakeLists.txt  README.md  host_wrappers.cu  kernels_bf16.cu  kernels_bf16_soa.cu  kernels_bf16_soa_bf162.cu  kernels_box_counting.cu  kernels_dd.cu  kernels_fp16.cu  kernels_fp16_soa.cu  kernels_fp16_soa_half2.cu  kernels_fp32_soa_cs.cu  kernels_fp4.cu  kernels_fp64.cu  kernels_fp64_soa.cu  kernels_fp8.cu  kernels_fp8_e5m2.cu  kernels_fp8_e5m2_soa.cu  kernels_fp8_soa.cu  kernels_int16.cu  kernels_int16_soa.cu  kernels_int4.cu  kernels_int8.cu  kernels_int8_soa.cu  kernels_int8_soa_mrt_aa.cu  kernels_inv_tau_precompute.cu  kernels_soa.cu  kernels_tensor_core.cu
src/cuda_lbm/bench/: bench_baselines.h  bench_harness.cu  bench_main.cu  bench_validate.cu
src/cuda_lbm/include/: lbm_kernel_selector.h  lbm_kernels.h  lbm_managed_memory.h  lbm_metrics.h
src/cuda_lbm/results/: .gitignore
src/cuda_lbm/scripts/: check_spills.sh  profile_ncu.sh  profile_ncu_all.sh  profile_nsys.sh
src/cuda_lbm/sparse/: kernels_sparse_lbm.cu  kernels_sparse_map.cu
src/cuda_lbm/test/: test_conservation.cu  test_main.cu  test_mrt_stability.cu  test_regression.cu
src/denoise/: onnx_denoise.c
src/nerf/: nerf_scheduler.c  nerf_simd.c  nerf_simd_integration.c
src/physics/: atomic_fission.c  atomic_fission.h  nuclear_reaction.c  nuclear_reaction.h  reactor_thermal.c  reactor_thermal.h
src/render/: render.c
src/sass_re/: MONOGRAPH_BUILD.md  (+16 more)
(+428 files in other folders)
